Aumentando universidades y funciones Admin

--- a/universidades/emi.html
+++ b/universidades/emi.html
@@ -69,7 +69,7 @@
 
         <div class="row bg-light">
 
-            <nav class="navbar navbar-dark bg-dark uni sidebar" >
+            <nav class="navbar navbar-dark bg-dark uni sidebar">
                 <div class="col-3">
 
                     <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
@@ -127,11 +127,17 @@
                     <div class="tab-pane fade show active" id="pills-emi-general" role="tabpanel" aria-labelledby="pills-emi-general-tab">
                         <h2>Informacion general EMI</h2>
 
+                        <img src="../img/emi/persona2.jpg" alt="" class="rounded mx-auto d-block">
+
                         <p style="text-align: justify;"><strong>VISIÓN</strong><br />Ser la Universidad líder en la formación de profesionales en Ingeniería y de especialización, caracterizada por el estudio, aplicación e innovación tecnológica, con responsabilidad social y reconocida a nivel nacional e internacional.<br /><strong>MISIÓN</strong><br />Formar y especializar profesionales de excelencia, con principios, valores ético - morales y cívicos, caracterizados por su responsabilidad social, espíritu emprendedor, liderazgo y disciplina; promoviendo la internacionalización, Interacción Social y desarrollo de la Ciencia, Tecnología e Innovación, para contribuir al desarrollo del Estado.<br /><strong>POLÍTICA DE CALIDAD</strong><br />Formar y especializar profesionales íntegros, con institucionalidad, responsabilidad social y cultura de innovación basada en la investigación y aplicación tecnológica, mediante el cumplimiento de los requisitos y estándares del Sistema de Gestión de Calidad.</p>
                         <p><strong>PRINCIPIOS</strong></p>
+                        <img src="../img/emi/personas.jpg" alt="" class="rounded mx-auto d-block">
+
                         <p style="padding-left: 30px; text-align: justify;">a. Busca la excelencia como desafío institucional en todos los actos académicos de formación, de investigación, de interacción social, de extensión y de gestión.<br />b. Dirige su esfuerzo principal a la formación y especialización tecnológica.<br />c. Forma y especializa profesionales en función a la visión del Estado.<br />d. Inculca valores ético - morales y principios.<br />e. Promueve y genera conocimientos de vanguardia tecnológica.<br />f. Respeta la libertad de pensamiento y culto.<br />g. Promueve el uso sostenible y sustentable de los recursos naturales y el Medio Ambiente.<br />h. Responde rápidamente y en forma planificada al cambiante entorno social, económico, tecnológico y científico.<br />i. Mantiene y profundiza las bases históricas y cívicas de nuestra identidad nacional para incrementar el orgullo de ser bolivianos y así proyectarnos hacia el futuro.<br />j. Respeta, preserva e integra los conocimientos tradicionales y saberes ancestrales a sus diseños curriculares.<br />k. Promueve la equidad de género, manteniendo la igualdad de oportunidades.</p>
                         <p><strong>VALORES</strong></p>
                         <p style="padding-left: 30px; text-align: justify;">a. Libertad, respetando las diferentes corrientes de pensamiento y expresión.<br />b. Equidad, otorgando oportunidades sin discriminación de género, ideología, raza y religión.<br />c. Honestidad, exaltando la verdad y la ética profesional.<br />d. Patriotismo, inculcando el civismo, identidad, cultura y amor a la Patria.<br />e. Disciplina, promoviendo el acatamiento consciente de normas y reglamentos institucionales; y el respeto a las leyes.<br />f. Liderazgo, formando líderes que promuevan el emprendimiento de forma individual y colectiva a nivel nacional e internacional.<br />g. Calidad y Excelencia, inspirando al Talento Humano para la generación de procesos de servicio y de producción, hasta alcanzar la excelencia.<br />h. Justicia, actuando en función a las leyes y normas vigentes.<br />i. Ética, respetando valores y principios de la entidad y el Estado.<br />j. Compromiso, promoviendo y logrando un sentimiento de entrega, identidad y unidad.<br />k. Igualdad, promoviendo la participación de la comunidad universitaria, sin discriminación ni restricciones, fomentando la cultura de la no violencia.<br />l. Complementariedad, generando sinergia entre la formación académica y los saberes ancestrales.</p>
+
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3824.815393804398!2d-68.0883420935948!3d-16.535414895386864!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x915f212398c5d1b5%3A0x1e20bc0a1880e88c!2sEscuela%20Militar%20de%20Ingenier%C3%ADa%2C%20Av%20Rafael%20Pab%C3%B3n%2C%20La%20Paz!5e0!3m2!1ses-419!2sbo!4v1585793812149!5m2!1ses-419!2sbo" width="800" height="600" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" class="img-fluid tam"></iframe>
 
 
                     </div>
